# skin_cancer_cnn_ml_stack

./: .gitignore  Dockerfile  README.md  prepare_data.sh  pyproject.toml  requirements.txt
models_final/: final_ensemble.pkl
src/: datasets.py  demo.ipynb  extract_features.py  inference.py  stack_ensemble.py  streamlit_app.py  train_cnn.py  train_tabular_models.py  utils.py
